refactor(core): replace deprecated list size checks with `isEmpty` and simplify optional handling
- Replaced `.size() == 0` or `.length() == 0` checks with `.isEmpty()` for cleaner and more readable code.
- Refactored usage of `Optional` with `.ifPresent()` where applicable.
- Simplified code in various classes by integrating modern Java features like pattern matching for `instanceof`.